<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">FirebaseBlog</string>
    <string name="del">DEL</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="authorization">Authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="age">age</string>
    <string name="registration">Registration</string>
    <string name="login_error">Email can not be empty</string>
    <string name="password_error">Password can not be empty</string>
    <string name="firstName_error">Name can not be empty</string>
    <string name="lastName_error">Surname can not be empty</string>
    <string name="age_error">Age can not be empty</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_data">No data</string>
    <string name="email_find_text">Email</string>
    <string name="add_friend_btn">Add</string>
    <string name="notes">Notes</string>
    <string name="notes_on_map">Notes on map</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="project_on_github">Project on GitHub</string>
</resources>
