<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:layout_marginBottom="70sp"
        android:text="@string/authorization"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:ems="5"
                android:fontFamily="@font/acme"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorText"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="4sp"
            android:textAlignment="center"
            app:srcCompat="@drawable/password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:ems="5"
                android:fontFamily="@font/acme"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorText"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:fontFamily="@font/acme"
        android:text="@string/sign_in"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:fontFamily="@font/acme"
        android:text="@string/registration"
        android:visibility="visible" />
</LinearLayout>