<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/grey_50"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_marginTop="4dp"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/email" />

                <EditText
                    android:id="@+id/et_email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5dp"
                    android:ems="5"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey_50"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_marginTop="4sp"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/password" />

                <EditText
                    android:id="@+id/et_password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5dp"
                    android:ems="5"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey_50"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ems="5"
                android:inputType="text"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/surname"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_surname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5dp"
                android:ems="5"
                android:inputType="text"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/age"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rb_male_reg"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_female_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_create_acc_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80sp"
            android:text="@string/create_an_account"
            android:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>